apps/communications/ftu/css/style.css
/* ... */
#unlock-sim-screen .input-wrapper {
  padding: 0 1.5rem;
  position: relative;
}

#unlock-sim-screen .info {
  font-size: 1.5rem;
  padding: 1rem 1.5rem;
}

#unlock-sim-screen .error {
  padding: 1rem 2rem;
  font-size: 1.5rem;
  color: red;
}

#unlock-sim-screen .onerror {
  border: 0.1rem solid red;
}

#unlock-sim-screen .input-wrapper input {
  font-size: 2rem;
  padding-left: 1.5rem;
}

#unlock-sim-screen input[type="password"] {
    -moz-box-sizing: border-box;
    display: block;
    overflow: hidden;
    width: 100%;
    height: 4rem;
    resize: none;
    padding: 0 0.8rem;
    pointer-events: none;
}

#hidden-wifi-authentication input[type="password"] {
  pointer-events: auto;
}

/*
  Languages Styles
*/

#languages {
  background: url(images/bg_bubbles.png) fixed no-repeat;
  background-size: 100% auto;
  overflow: hidden;
}

#languages [data-type="list"] {
  position: relative;
  top: 15.5rem;
  height: calc(100% - 15.5rem);
  overflow-y: scroll;
  overflow-x: hidden;
  padding-top: 0;
}

/*
 * Wifi
 */

#wifi [data-type="list"] li > p {
  pointer-events: none;
}

#wifi li {
  padding: 0 1.5rem;
}
#wifi li.connected p {
  color: #00AACC;
}

#wifi li:after {
  content: "";
  transition: opacity 0.2s ease;
  background: #b1f1ff;
  opacity: 0;
  position: absolute;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  z-index: 0;
}

#wifi li:active:after {
  opacity: 0.6;
}

/*
  No result container
*/

#wifi-wrapper {
  top: 0;
  bottom: 5.5rem;
}

#networks-list:first-child {
  padding-top: 0;
}

#join-hidden-button {
  bottom: 0;
  margin-top: 1.5rem;
  width: calc(100% - 3rem);
  margin-left: 1.5rem;
}

#wifi #no-result-container {
  position: absolute;
  background: url('images/wifi_icon.png') no-repeat fixed center / 23.6rem;
  height: 100%;
  width: 100%;
  pointer-events: none;
}

#wifi #no-result-message {
  text-align: left;
  line-height: 3rem;
  position: relative;
  top: 50%;
  border-top: .1rem solid rgba(96,96,96,.5);
  padding: 0;
  width: 27rem;
  margin: -3rem auto;
  color: #606060;
  font-weight: 300;
  font-size: 2.26rem;
}

/*
 * States of Wifi signal
 */
aside.wifi-icon {
  background-repeat: no-repeat;
  background-position: 0 center;
  background-size: 16rem;
  width: 3.2rem;
}
aside.wifi-signal       { background-image: url(images/wifi_disconnected_sprite.png);}
aside.connected         { background-image: url(images/wifi_connected_sprite.png);}
aside.secured           { background-image: url(images/wifi_disconnected_locked_sprite.png);}
aside.secured.connected { background-image: url(images/wifi_connected_locked_sprite.png);}
aside.level-0 { background-position:     0rem center;}
aside.level-1 { background-position:  -3.2rem center;}
aside.level-2 { background-position:  -6.4rem center;}
aside.level-3 { background-position:  -9.6rem center;}
aside.level-4 { background-position: -12.8rem center;}

aside.secured.connecting { background-image: url(images/wifi_connected_locked_sprite.png);}
aside.connecting {
  background-image: url(images/wifi_connected_sprite.png);
  animation-duration: 1s;
  animation-iteration-count: infinite;
  animation-timing-function: step-start;
  animation-name: wifi-signal;
}
@keyframes wifi-signal {
 0%     { background-position:     0rem center; }
 25%    { background-position:  -3.2rem center; }
 50%    { background-position:  -6.4rem center; }
 75%    { background-position:  -9.6rem center; }
 100%   { background-position: -12.8rem center; }
}


/*
  Wifi configuration
*/

#hidden-wifi-authentication form,
#configure_network_params form {
  padding: 1rem 1.5rem;
}

#hidden-wifi-authentication form label,
#configure_network_params form label {
  display: block;
  padding: 1.5rem 1.5rem 0.5rem 1.5rem ;
  font-size: 1.5rem;
}

#hidden-wifi-authentication form select {
  width: 100%;
  padding: 0.5rem 1.5rem 0.5rem 1.5rem ;
  font-size: 1.5rem;
}

#hidden-wifi-authentication form select,
#hidden-wifi-authentication form input,
#configure_network_params form input {
  padding-left: 1.5rem;
}

/* The hide class is needed by the custom_dialog.js library */
.hidden, .hide {
  display: none !important;
}

/* 'show password' checkboxes */
#configure_network_params label:not([for]){
  display: inline-block;
  width: auto;
  height: auto;
}

#hidden-wifi-authentication label span,
#configure_network_params label span {
  top: 2rem;
  left: 3rem;
}

#hidden-wifi-authentication label p {
  width: 12rem;
  bottom: 0.4rem;
  left: 3rem;
}

#configure_network_params label p {
  width: auto;
  float: right;
  bottom: 0.4rem;
  left: 3rem;
}

/*
  Finish process
*/

#finish-screen, #tutorialFinish {
  opacity: 0;
  z-index: 3010;
  transition: all 1s ease;
  background: url(images/bg_grey-noise.png);
}

#finish-screen.show, #tutorialFinish.show {
  opacity: 1;
}

#finish-screen h1, #tutorialFinish h1 {
  margin: 0;
  color: white;
  font-size: 3rem;
  padding: 4rem 0 0 0;
  font-weight: 200;
  line-height: 4rem;
}

#finish-screen h2, #tutorialFinish h2 {
  margin: 0;
  color: white;
  font-size: 1.9rem;
  padding: .5rem 0 2rem 0;
  font-weight: 200;
  line-height: 2rem;
}

#finish-screen p, #tutorialFinish p {
  margin: 0;
  color: white;
  font-size: 1.4rem;
  font-weight: normal;
}

#finish-screen .content {
  background: url(images/icon_tour.png) no-repeat center 95% / 16.9rem;
}

#tutorialFinish .content {
  background: url(images/thumb_up.png) no-repeat center 70% / 14.4rem;
}

#finish-screen .content, #tutorialFinish .content {
  height: calc(100% - 6rem);
  padding: 0 3rem;
  width: calc(100% - 6rem);
  background-size: 17.6rem;
}

#finish-screen [role=navigation],#tutorialFinish [role=navigation] {
  border-top: .1rem solid #697476;
}

#finish-screen [role=navigation] button,#tutorialFinish [role=navigation] button {
  text-align: center;
}

#step1Img, #step2Img, #step3Img, #step4Img, #step5Img {
  width: 28.9rem;
}

/*
  Date and time
*/

.change {
  float: right;
  width: 8rem;
}
/* ... */

